Sonarcloud: refactor Collectors.toList() to toList()
Request: MO
Change-Id: Ib36df234ae6b523c8d78ee2026292c95e603a5d1